--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   speech_to_text: ^7.0.0
   provider: ^6.1.2
+  http: ^1.3.0
+  flutter_secure_storage: ^9.2.4
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
