--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   http: ^1.3.0
   flutter_secure_storage: ^9.2.4
   google_fonts: ^6.2.1
+  flutter_quill: ^11.2.0
+  flutter_localization: ^0.3.2
 
 dev_dependencies:
   flutter_test:
