--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_quill: ^11.2.0
   flutter_localization: ^0.3.2
+  web_socket_channel: ^3.0.2
 
 dev_dependencies:
   flutter_test:
