--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,11 @@ dependencies:
   flutter_quill: ^11.2.0
   flutter_localization: ^0.3.2
   web_socket_channel: ^3.0.2
+  firebase_core: ^3.13.0
+  firebase_messaging: ^15.2.5
+  flutter_local_notifications: ^19.2.0
+  app_badge_plus: ^1.2.1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
