--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_local_notifications: ^19.2.0
   app_badge_plus: ^1.2.1
   permission_handler: ^12.0.0+1
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
